# ollama-clone

./: Cargo.toml  index.html
src/: main.rs
