[package]
name = "ollama_clone"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stylist = { version = "0.13.0", features = ["yew_integration"] }
trunk = "0.17.5"
yew = { version = "0.21.0", features = ["csr"] }
